--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 
 [dependencies]
 glam = { version = "0.21", default-features = false, features = ["libm"] }
+ash = "0.37.0+1.3.209"
+image = "0.24.3"
+ash-window = "0.11.0"
+winit = "0.27.2"
