--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,252 @@ Cargo.lock
 # Added by cargo
 
 /target
+obj/luciya.obj
+obj/miku.obj
+obj/common/BRDF_LUT.tga
+obj/common/i_nx.tga
+obj/common/i_ny.tga
+obj/common/i_nz.tga
+obj/common/i_px.tga
+obj/common/i_py.tga
+obj/common/i_pz.tga
+obj/common/m0_nx.tga
+obj/common/m0_nx1.tga
+obj/common/m0_ny.tga
+obj/common/m0_ny1.tga
+obj/common/m0_nz.tga
+obj/common/m0_nz1.tga
+obj/common/m0_px.tga
+obj/common/m0_px1.tga
+obj/common/m0_py.tga
+obj/common/m0_py1.tga
+obj/common/m0_pz.tga
+obj/common/m0_pz1.tga
+obj/common/m1_nx.tga
+obj/common/m1_ny.tga
+obj/common/m1_nz.tga
+obj/common/m1_px.tga
+obj/common/m1_py.tga
+obj/common/m1_pz.tga
+obj/common/m2_nx.tga
+obj/common/m2_ny.tga
+obj/common/m2_nz.tga
+obj/common/m2_px.tga
+obj/common/m2_py.tga
+obj/common/m2_pz.tga
+obj/common/m3_nx.tga
+obj/common/m3_ny.tga
+obj/common/m3_nz.tga
+obj/common/m3_px.tga
+obj/common/m3_py.tga
+obj/common/m3_pz.tga
+obj/common/m4_nx.tga
+obj/common/m4_ny.tga
+obj/common/m4_nz.tga
+obj/common/m4_px.tga
+obj/common/m4_py.tga
+obj/common/m4_pz.tga
+obj/common/m5_nx.tga
+obj/common/m5_ny.tga
+obj/common/m5_nz.tga
+obj/common/m5_px.tga
+obj/common/m5_py.tga
+obj/common/m5_pz.tga
+obj/common/m6_nx.tga
+obj/common/m6_ny.tga
+obj/common/m6_nz.tga
+obj/common/m6_px.tga
+obj/common/m6_py.tga
+obj/common/m6_pz.tga
+obj/common/m7_nx.tga
+obj/common/m7_ny.tga
+obj/common/m7_nz.tga
+obj/common/m7_px.tga
+obj/common/m7_py.tga
+obj/common/m7_pz.tga
+obj/common/m8_nx.tga
+obj/common/m8_ny.tga
+obj/common/m8_nz.tga
+obj/common/m8_px.tga
+obj/common/m8_py.tga
+obj/common/m8_pz.tga
+obj/common/m9_nx.tga
+obj/common/m9_ny.tga
+obj/common/m9_nz.tga
+obj/common/m9_px.tga
+obj/common/m9_py.tga
+obj/common/m9_pz.tga
+obj/common2/i_nx.tga
+obj/common2/i_ny.tga
+obj/common2/i_nz.tga
+obj/common2/i_px.tga
+obj/common2/i_py.tga
+obj/common2/i_pz.tga
+obj/common2/m0_nx.tga
+obj/common2/m0_ny.tga
+obj/common2/m0_nz.tga
+obj/common2/m0_px.tga
+obj/common2/m0_py.tga
+obj/common2/m0_pz.tga
+obj/common2/m1_nx.tga
+obj/common2/m1_ny.tga
+obj/common2/m1_nz.tga
+obj/common2/m1_px.tga
+obj/common2/m1_py.tga
+obj/common2/m1_pz.tga
+obj/common2/m2_nx.tga
+obj/common2/m2_ny.tga
+obj/common2/m2_nz.tga
+obj/common2/m2_px.tga
+obj/common2/m2_py.tga
+obj/common2/m2_pz.tga
+obj/common2/m3_nx.tga
+obj/common2/m3_ny.tga
+obj/common2/m3_nz.tga
+obj/common2/m3_px.tga
+obj/common2/m3_py.tga
+obj/common2/m3_pz.tga
+obj/common2/m4_nx.tga
+obj/common2/m4_ny.tga
+obj/common2/m4_nz.tga
+obj/common2/m4_px.tga
+obj/common2/m4_py.tga
+obj/common2/m4_pz.tga
+obj/common2/m5_nx.tga
+obj/common2/m5_ny.tga
+obj/common2/m5_nz.tga
+obj/common2/m5_px.tga
+obj/common2/m5_py.tga
+obj/common2/m5_pz.tga
+obj/common2/m6_nx.tga
+obj/common2/m6_ny.tga
+obj/common2/m6_nz.tga
+obj/common2/m6_px.tga
+obj/common2/m6_py.tga
+obj/common2/m6_pz.tga
+obj/common2/m7_nx.tga
+obj/common2/m7_ny.tga
+obj/common2/m7_nz.tga
+obj/common2/m7_px.tga
+obj/common2/m7_py.tga
+obj/common2/m7_pz.tga
+obj/common2/m8_nx.tga
+obj/common2/m8_ny.tga
+obj/common2/m8_nz.tga
+obj/common2/m8_px.tga
+obj/common2/m8_py.tga
+obj/common2/m8_pz.tga
+obj/common2/m9_nx.tga
+obj/common2/m9_ny.tga
+obj/common2/m9_nz.tga
+obj/common2/m9_px.tga
+obj/common2/m9_py.tga
+obj/common2/m9_pz.tga
+obj/diablo/diablo3_pose_diffuse.bmp
+obj/diablo/diablo3_pose_nm.bmp
+obj/diablo/diablo3_pose_spec.bmp
+obj/diablo/diablo3_pose.obj
+obj/diablo/noshiro.jpg
+obj/fuhua/头发2.png
+obj/fuhua/floor_diffuse.tga
+obj/fuhua/floor.mtl
+obj/fuhua/floor.obj
+obj/fuhua/fuhua.png
+obj/fuhua/fuhuabody_diffuse.tga
+obj/fuhua/fuhuabody.obj
+obj/fuhua/fuhuacloak_diffuse.tga
+obj/fuhua/fuhuacloak.obj
+obj/fuhua/fuhuaface_diffuse.tga
+obj/fuhua/fuhuaface.mtl
+obj/fuhua/fuhuaface.obj
+obj/fuhua/fuhuahair_diffuse.tga
+obj/fuhua/fuhuahair.obj
+obj/gun/Cerberus_diffuse.tga
+obj/gun/Cerberus_metalness.tga
+obj/gun/Cerberus_normal.tga
+obj/gun/Cerberus_roughness.tga
+obj/gun/Cerberus.obj
+obj/gun/Cerberus2.obj
+obj/gun/gun.png
+obj/helmet/helmet_diffuse.tga
+obj/helmet/helmet_emission.tga
+obj/helmet/helmet_metalness.tga
+obj/helmet/helmet_normal.tga
+obj/helmet/helmet_occlusion.tga
+obj/helmet/helmet_roughness.tga
+obj/helmet/helmet.obj
+obj/helmet/helmet.png
+obj/helmet/helmet2.obj
+obj/helmet/helmet正.obj
+obj/helmet/untitled.mtl
+obj/qiyana/qiyana.png
+obj/qiyana/qiyanabody_diffuse.tga
+obj/qiyana/qiyanabody.obj
+obj/qiyana/qiyanaface_diffuse.tga
+obj/qiyana/qiyanaface.obj
+obj/qiyana/qiyanahair_diffuse.tga
+obj/qiyana/qiyanahair.obj
+obj/skybox2/box_back.tga
+obj/skybox2/box_bottom.tga
+obj/skybox2/box_front.tga
+obj/skybox2/box_left.tga
+obj/skybox2/box_right.tga
+obj/skybox2/box_top.tga
+obj/skybox2/box.obj
+obj/skybox2/negx.bmp
+obj/skybox2/negy.bmp
+obj/skybox2/negz.bmp
+obj/skybox2/posx.bmp
+obj/skybox2/posy.bmp
+obj/skybox2/posz.bmp
+obj/skybox4/box_back.tga
+obj/skybox4/box_back1.tga
+obj/skybox4/box_bottom.tga
+obj/skybox4/box_bottom1.tga
+obj/skybox4/box_front.tga
+obj/skybox4/box_front1.tga
+obj/skybox4/box_left.tga
+obj/skybox4/box_left1.tga
+obj/skybox4/box_right.tga
+obj/skybox4/box_right1.tga
+obj/skybox4/box_top.tga
+obj/skybox4/box_top1.tga
+obj/skybox4/box.obj
+obj/skybox4/m0_nx.hdr
+obj/skybox4/m0_ny.hdr
+obj/skybox4/m0_nz.hdr
+obj/skybox4/m0_px.hdr
+obj/skybox4/m0_py.hdr
+obj/skybox4/m0_pz.hdr
+obj/skybox4/JPEG/i_py.hdr
+obj/skybox4/JPEG/m0_nx.jpg
+obj/skybox4/JPEG/m0_ny.jpg
+obj/skybox4/JPEG/m0_nz.jpg
+obj/skybox4/JPEG/m0_px.jpg
+obj/skybox4/JPEG/m0_py.jpg
+obj/skybox4/JPEG/m0_pz.jpg
+obj/xier/xierarm_diffuse.tga
+obj/xier/xierarm.obj
+obj/xier/xierbody_diffuse.tga
+obj/xier/xierbody.obj
+obj/xier/xiercloth_diffuse.tga
+obj/xier/xiercloth.obj
+obj/xier/xierface_diffuse.tga
+obj/xier/xierface.obj
+obj/xier/xierhair_diffuse.tga
+obj/xier/xierhair.obj
+obj/yayi/yayi.png
+obj/yayi/yayiarmour1_diffuse.tga
+obj/yayi/yayiarmour1.obj
+obj/yayi/yayiarmour2_diffuse.tga
+obj/yayi/yayiarmour2.obj
+obj/yayi/yayibody_diffuse.tga
+obj/yayi/yayibody.obj
+obj/yayi/yayidecoration_diffuse.tga
+obj/yayi/yayidecoration.obj
+obj/yayi/yayiface_diffuse.tga
+obj/yayi/yayiface.obj
+obj/yayi/yayihair_diffuse.tga
+obj/yayi/yayihair.obj
+obj/yayi/yayisword_diffuse.tga
+obj/yayi/yayisword.obj
