--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,5 @@
-[package]
-name = "f_renderer"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-glam = { version = "0.21", default-features = false, features = ["libm"] }
-ash = "0.37.0+1.3.209"
-image = "0.24.3"
-ash-window = "0.11.0"
-winit = "0.27.2"
-# nalgebra = "0.31.1"
+[workspace]
+members = [
+    "examples",
+    "f_renderer",
+]
