--- a/f_renderer/Cargo.toml
+++ b/f_renderer/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 glam = { version = "0.21", default-features = false, features = ["libm"] }
 ash = "0.37.0+1.3.209"
-image = "0.24.3"
 ash-window = "0.11.0"
 winit = "0.27.2"
-# nalgebra = "0.31.1"
+wgpu = "0.16.0"
+bytemuck = { version = "1.13.1", features = [ "derive" ] }
+futures-lite = "1.13.0"
+image = "0.24.6"
